# complex-analysis-lab1

./: pyproject.toml
fractals/: burning_ship.py  common.py  julia.py  mandelbrot.py  mandelbrote.py
