[tool.poetry]
name = "lab1"
version = "0.1.0"
description = "Lab #1 for Complex Analysis (ITMO 3rd semester)"
authors = ["Kirill Ankudinov <kirill.ankudinov.94@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
generativepy = "^24.4"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
